--- a/ui/src/app/views/navbar/navbar.html
+++ b/ui/src/app/views/navbar/navbar.html
@@ -8,7 +8,8 @@
             {{ 'navbar_projects' | translate }}
         </a>
         <nz-select *ngIf="selectedProjectKey" nzShowSearch [ngModel]="selectedProjectKey"
-            (ngModelChange)="navigateToProject($event)" [class.not-dark]="!darkActive">
+            (ngModelChange)="navigateToProject($event)" [class.not-dark]="!darkActive"
+            [nzDropdownMatchSelectWidth]="false">
             <nz-option *ngFor="let p of projects" [nzLabel]="p.name" [nzValue]="p.key"></nz-option>
         </nz-select>
 
