--- a/ui/src/app/views/projectv2/run-list/run-list.html
+++ b/ui/src/app/views/projectv2/run-list/run-list.html
@@ -98,7 +98,7 @@
 					<ng-container *ngFor="let annotation of run.annotations | keyvalue">
 						<nz-tag *ngIf="annotation.value !== 'true'" nzColor="default"
 							title="key; {{annotation.key}} - value: {{annotation.value}}">
-							<b>{{annotation.key}}:</b> {{annotation.key}}
+							<b>{{annotation.key}}:</b> {{annotation.value}}
 						</nz-tag>
 						<span *ngIf="annotation.value === 'true'" nzColor="default"
 							title="key; {{annotation.key}} - value: {{annotation.value}}">
