refactor(ui): queue job v2 page
Signed-off-by: richardlt <richard.le.terrier@gmail.com>

--- a/ui/src/app/views/projectv2/run-list/run-list.html
+++ b/ui/src/app/views/projectv2/run-list/run-list.html
@@ -130,7 +130,7 @@
 			<nz-option nzValue="started:desc" nzLabel="started desc"></nz-option>
 			<nz-option nzValue="started:asc" nzLabel="started asc"></nz-option>
 		</nz-select>
-		<nz-pagination [nzPageIndex]="index" [nzPageSize]="20" [nzTotal]="totalCount"
+		<nz-pagination [nzPageIndex]="pageIndex" [nzPageSize]="20" [nzTotal]="totalCount"
 			(nzPageIndexChange)="pageIndexChange($event)"></nz-pagination>
 	</div>
 </div>
