--- a/ui/src/app/views/projectv2/run/run.html
+++ b/ui/src/app/views/projectv2/run/run.html
@@ -6,8 +6,7 @@
             <nz-page-header class="title" nzBackIcon (nzBack)="onBack()">
                 <nz-page-header-title>
                     <app-searchable [link]="['/project', projectKey, 'run']"
-                        [params]="{workflow: workflowRun.vcs_server+'/'+workflowRun.repository+'/'+workflowRun.workflow_name}"
-                        paramsHandling="merge">
+                        [params]="{workflow: workflowRun.vcs_server+'/'+workflowRun.repository+'/'+workflowRun.workflow_name}">
                         <a [routerLink]="['/project', projectKey, 'explore', 'vcs', workflowRun.vcs_server, 'repository', workflowRun.repository, 'workflow', workflowRun.workflow_name]"
                             [queryParams]="{branch: workflowRun.contexts.git.ref_name}">
                             {{workflowRun.vcs_server}}/{{workflowRun.repository}}/{{workflowRun.workflow_name}}</a>
@@ -62,7 +61,7 @@
                     <div *ngIf="workflowRun.annotations" class="annotations">
                         <ng-container *ngFor="let annotation of workflowRun.annotations | keyvalue">
                             <app-searchable [link]="['/project', projectKey, 'run']"
-                                [params]="generateAnnotationQueryParams(annotation)" paramsHandling="merge">
+                                [params]="generateAnnotationQueryParams(annotation)">
                                 <nz-tag *ngIf="annotation.value !== 'true'" nzColor="default"
                                     title="key: {{annotation.key}} - value: {{annotation.value}}" nz-popover
                                     nzPopoverPlacement="bottom" [nzPopoverContent]="contentAnnotationWithValue">
